2001-02-23  Masatake YAMATO  <yamato@redhat.com>

	Applied patches from Martin.
	-- I removed some compiler warnings in color.h 
	and pxl-outline.c. Also I have a new autotrace.dsp.

	* pxl-outline.c: Updated.

	* color.h: Updated.

	* autotrace.dsp: Updated.

2001-02-23  Masatake YAMATO  <yamato@redhat.com>
	
	* configure.in: Set version to 0.27pre.

	* output-eps.c (out_splines): Use at_centerline.

	* main.c (main): Use at_centerline.
	(centerline): static scope.
	
	* autotrace.[hc] (at_centerline): New varaible.
	
2001-02-22  Masatake YAMATO  <yamato@redhat.com>

	* output.h (OUTPUT_SUFFIX_LIST): Added "er".

2001-02-20  Martin Weber <martweb@gmx.net>

	-- Centerline vectorization

	* Makefile.am: Added output-er.c and .h.

	* autotrace.c: Modified at_splines_new() to support centerline
		vectorization.

	* autotrace.h: Added 'open' flag to at_spline_list_type.

	* color.h: Added COLOR_LUMINANCE() macro.

	* curve.h: Added 'open' flag to curve_list_type.

	* fit.c: Made several modifications to handle open curves.

	* input-pnm.c: In pnm_load_image(), replaced fopen()/fclose()
		with xfopen()/xfclose() (see below).

	* main.c: Added a -centerline option.  Commented out a call to
		free() that was causing memory corruption.  Fixed a bug
		in the conversion to decimal of the -background-color
		hex string.  Reinstated 'remove_adj_corners' and 'thin'
		globals as temporary variables (because the SGI MIPSpro
		compiler doesn't allow initializing 'long_options' with
		the addresses of a non-static variables).

	* median.c: Added rudimentary support for single-channel images
		(by interpreting them as three-channel images for which
		R = G = B).  Changed the way the background color is
		handled.  Changed some function prototypes.

	* output-eps.c: Made changes to support open curves.

	* output-er.c,
	  output-er.h: New; adds Elastic Reality shape file output.

	* output.c: Added Elastic Reality shape file output format (see
		output-er.c and .h).
